# crypt-chat

./: .gitignore  CLIENTS_README.md  Makefile  PROTOCOL.md  README.md  chat_client_protocol.py  dtekv-script.lds  meson.build  run_lab.sh
cross/: riscv32.ini
docs/: COPYING  docs.md
include/: aead.h  basetypes.h  chacha20.h  chat_framer.h  chat_protocol.h  crypto_key.h  devices.h  dtekv-lib.h  poly1305.h  proto.h  uart.h  utils.h
src/: aead.c  boot.S  chacha20.c  chat_framer.c  chat_protocol.c  devices.c  dtekv-lib.c  main.c  poly1305.c  uart.c  utils.c
